# line-collision-detector

./: .bashrc  .cmake-format.json  .gitconfig  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  Dockerfile  LICENSE  README.md  benchit.sh  build-docker.sh  build.sh  buildfile  bv.sh  clean.sh  compile.sh  coredump-shell.sh  dbuild.sh  dcompile.sh  demo-and-algorithm-outline.scad  docker-shell.sh  faster.sh  generate_symmetrical_params.m  indent.sh  make-compilation-database.sh  make_compilation_database.sh  t.sh  test.sh  tidy.sh
cmake/: functions.cmake
googletest-release-1.8.1/: CMakeLists.txt
googletest-release-1.8.1/googletest/: CMakeLists.txt
include/: closed_flat_path.h  line_collision_detector.h  pivot_points.h  xyz.h
linc/: README.md  buildfile  make_compilation_database.sh  manifest  repositories.manifest
linc-clang/.bpkg/: bpkg.sqlite3
linc-gcc/.bpkg/: bpkg.sqlite3
linc/.bdep/: bdep.sqlite3
linc/linc/: .gitignore  buildfile  linc  linc.cxx  linc.hxx  linc.test.cxx  linc.testscript  main.cxx  params  params.cxx  params.hxx  params.test.cxx  params.test.testscript  pivot-points.hxx  pivot-points.test.cxx  stl.hxx  stlinit.cxx  xyz.hxx  (+5 more)
line-collision-detector/: buildfile  line_collision_detector.cxx  line_collision_detector.hxx  line_collision_detector.test.cxx  main.cxx  make_compilation_database.sh  manifest  params  pivot_points.hxx  pivot_points.test.cxx  repositories.manifest  xyz.test.cxx
media/: execution-times
src/: line_collision_detector.cpp  main.cpp
test/: CMakeLists.txt  test_line_collision_detector.cpp  test_pivot_points.cpp
(+16 files in other folders)
